@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Changed message in inc/CPANTesting
+
 0.11.401 2012-07-10
          - Added email_address method to F::MailAlias
          - Add class attribute to F::DC::Exception
